[REFACTOR] Unapply async and better dto